# backend/app/Models/Pedido.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Laravel\Sanctum\HasApiTokens;
+use Spatie\Permission\Traits\HasRoles;
+
+class Pedido extends Model
+{
+    use HasFactory, HasRoles, HasApiTokens;
+
+    protected $fillable = [
+        'cliente_id', 'conductor_id', 'origen', 'destino', 'descripcion', 'estado',
+    ];
+
+    public function cliente()
+    {
+        return $this->belongsTo(User::class, 'cliente_id');
+    }
+
+    public function conductor()
+    {
+        return $this->belongsTo(Conductor::class, 'conductor_id');
+    }
+}
